cleaning up and tweaking a little CSS

--- a/tingle.css
+++ b/tingle.css
@@ -85,7 +85,8 @@
   flex-shrink: 0;
   margin-top: auto;
   margin-bottom: auto;
-  width: 60%;
+  width: auto;
+  height: auto;
   border-radius: 4px;
   background: #fff;
   opacity: 1;
@@ -101,6 +102,8 @@
 
 .tingle-modal-box__content {
   padding: 3rem 3rem;
+  height: 100%;
+  width: 100%;
 }
 
 
